--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/SproutShareDevs/SproutShare#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "pg": "^8.8.0"
   }
 }
