--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -20,12 +20,17 @@
   "homepage": "https://github.com/SproutShareDevs/SproutShare#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "path": "^0.12.7",
     "pg": "^8.8.0"
   }
