--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SproutShareDevs/SproutShare#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
