--- a/sproutshare-client/package.json
+++ b/sproutshare-client/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
     "expo": "~46.0.9",
+    "expo-device": "~4.3.0",
+    "expo-notifications": "~0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "native-notify": "^3.0.2",
@@ -25,9 +27,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "expo-device": "~4.3.0",
-    "expo-notifications": "~0.16.1"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
