--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
