--- a/sproutshare-client/package.json
+++ b/sproutshare-client/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "expo": "~46.0.9",
     "expo-device": "~4.3.0",
+    "expo-image-picker": "~13.3.1",
     "expo-notifications": "~0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
